<resources>
    <string name="app_name">Shelted</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="button_add">Button Add</string>
    <string name="albertohl2000_gmail_com">albertohl2000@gmail.com</string>
    <string name="prueba123">prueba123</string>
    <string name="email">Email:</string>
    <string name="i_don_t_have_an_account">I don\'t have an account!</string>
    <string name="log_in">Log in</string>
    <string name="todo">TODO</string>
    <string name="e_mail">E-mail:</string>
    <string name="password">Password:</string>
    <string name="are_you_a_shelter">Shelter</string>
    <string name="birth_date">Birth date:</string>
    <string name="shelter">Shelter:</string>
    <string name="name_and_surname_s">Name and Surname(s):</string>
    <string name="_13_3_inch_256_gb">13.3 Inch, 256 GB</string>
</resources>